-test Borland C++ Builder from 
 http://www.borland.com/products/downloads/download_cbuilder.html
-test Macintosh Programmer's Workshop from
 http://developer.apple.com/tools/mpw-tools/
-test TenDRA C/C++ compiler from
 http://www.tendra.org/  or
 http://www.cse.unsw.edu.au/~patrykz/TenDRA/

-test cmake, dmake, pmake, smake


CHANGES:

2.4.16 added examples for article
       (2005-08-28, HA)
       enhancement: allow alignments bigger than page size
       (2005-08-23, HA)
       documented EF_NO_THREAD_SAFETY preprocessor flag in Makefile
       added EF_EXPLICIT_INIT preprocessor flag to workaround buggy environments:
         initialisation is done in 2 steps:
         1- must do things when allocation is called
         2- non must-do like retrieving environment variables, registering atexit()
           calls to functions getenv(), atexit() and write() are avoided in 1.step
         3- avoid semaphore locking before 2.step is done
       (2005-08-21, HA)

2.4.15 bugfixed page management under Windows: virtual address space never got
         released. unfortunately this "quick" fix avoids memory pooling (under
         Windows).
       remove double "Electric Fence:" messages when calling EF_Abort() or EF_Exit()
       (2005-07-24, HA)
       added parameter ExitOnFail to Page_Create().
       added warning when allocation failed and ExitOnFail is off.
       extended _eff_allocate() for this. prepared new for standard conformity.
       (2005-07-20, HA)

2.4.14 integrated code from Tim Braun <braun@informatik.uni-kl.de>
         new EF_SHOW_ALLOC environment variable, which prints allocations
           and deallocation when variable set
         check if malloc() and free() are bound to efence
       (2005-07-15, HA)
       integrated a patch from Zbynek Vyskovsky <kvr@centrum.cz>
         in his words: "I modified Electric Efence a little, to be able
           to catch free-ing memory via watch point in debugger. The patch