@@ -71,6 +71,7 @@ TODO:
 CHANGES:
 
 2.4.16 added examples for article
+       portability: use standardized strerror() instead sys_nerr and sys_errlist[]
        (2005-08-28, HA)
        enhancement: allow alignments bigger than page size
        (2005-08-23, HA)
